[tool.poetry]
name = "market-proxy-clients"
version = "0.1.0"
description = ""
authors = ["Aaron Frantisak <afrantisak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "4.10.0"
websockets = "10.3"
PyJWT = "^2.4.0"
cryptography = "^37.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
